# JSC_MECANUM_ROS2_PC

./: README.md  frames_2024-10-31_13.57.28.gv  frames_2024-11-11_13.54.11.gv  mapa_2.yaml
log/: latest_build
src/a_cartographer/: CMakeLists.txt  package.xml
src/a_cartographer/config/: omni_lds_2d.lua
src/a_cartographer/launch/: cartographer_launch.py
src/a_cartographer/rviz/: tb3_cartographer.rviz
src/a_control/: CMakeLists.txt  package.xml
src/a_gazebo/: CMakeLists.txt
src/a_gazebo/launch/: bringup_launch.py  gazebo_sim_launch_rf2o.py  jsc_cart_slam_launch.py  robot_state_publisher_launch.py
src/a_gazebo/maps/: mapa_2.pgm
src/a_gazebo/params/: nav2_params.yaml
src/a_gazebo/rviz/: nav2_default_view.rviz
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/jsc_mecanum_bringup/launch/: jsc_mecanum_hardware.py  jsc_mecanum_state_publisher.py  rviz2.py
src/jsc_mecanum_controller/src/: jsc_mecanum_drive_controller.cpp
src/jsc_mecanum_description/: CMakeLists.txt  package.xml
src/jsc_mecanum_description/config/: slam_toolbox_config.yaml
src/jsc_mecanum_description/launch/: jsc_mecanum_bot_v4_launch.py  jsc_mecanum_bot_v5_launch.py  jsc_mecanum_bot_v7_launch.py  jsc_mecanum_bot_v7_launch_pi.py  jsc_mecanum_bot_v8_launch.py  jsc_mecanum_bot_v8_launch_pi.py  jsc_mecanum_bot_v9_launch.py
src/jsc_mecanum_description/maps/: mapa1.pgm  mapa1.yaml
src/jsc_mecanum_description/rviz/: model.rviz
src/jsc_mecanum_hardware/src/: jsc_mecanum_hardware.cpp
src/motor_gui_pkg/: package.xml  setup.py
(+263 files in other folders)
