<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a_cartographer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="juan.socas101@alu.ulpgc.es">jsc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cartographer_ros</exec_depend>
  <depend>urdf</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
